keycloak/keycloak-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: vrubizhanskyi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: account
                port:
                  number: 8080
